Closed Bug 336008 Opened 19 years ago Closed 19 years ago

Coverity 470, missing error check

Categories

(Core Graveyard :: Installer: XPInstall Engine, defect)

defect
Not set
normal

Tracking

(Not tracked)

VERIFIED FIXED
mozilla1.9alpha1

People

(Reporter: jonsmirl, Assigned: jonsmirl)

Details

(Keywords: coverity)

Attachments

(2 files)

Rearrange things so that error code is return instead of ignored.
Keywords: coverity
Attachment #220306 - Flags: review?(benjamin)
Can I get this patch with a lot more context?
Most of the diff is caused by an indentation change from removing an if level. Here is a -b version, but commit the first version so the white space will be right.
Attachment #220306 - Flags: review?(benjamin) → review+
Whiteboard: [checkin needed]
Assignee: xpi-engine → jonsmirl
Checked in on the trunk. mozilla/xpinstall/src/nsXPInstallManager.cpp 1.144
Status: NEW → RESOLVED
Closed: 19 years ago
OS: Linux → All
Hardware: PC → All
Resolution: --- → FIXED
Whiteboard: [checkin needed]
Target Milestone: --- → mozilla1.9alpha
Attachment #222878 - Attachment is patch: true
QA Contact: xpi-engine
Status: RESOLVED → VERIFIED
Product: Core → Core Graveyard
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: