Bug 336008: add missing error check, patch by Jon Smirl <jonsmirl@gmail.com>, r=bsmedberg